# manning-fpcpp

./: CMakeLists.txt  README.md
01-count-lines-iterative/: Makefile  main.cpp
01-count-lines-transform/: main.cpp
02-average-score/: main.cpp
02-copyif-return-value/: Makefile
02-count-lines-using-accumulate/: main.cpp
02-filter-and-transform-combined/: main.cpp
02-range-filter-and-transform/: Makefile
04-knuth-problem/: Makefile
04-lifting/: main.cpp
04-printing-people/: main.cpp
chapter-01/: CMakeLists.txt
chapter-01/count-lines-stdcount/: main.cpp
chapter-01/count-lines-transform/: main.cpp
chapter-02/: CMakeLists.txt
chapter-02/average-score/: main.cpp
chapter-02/copyif-return-value/: main.cpp
chapter-02/count-lines-using-accumulate/: main.cpp
chapter-02/filter-and-transform/: main.cpp
chapter-02/filter-and-transform-combined/: main.cpp
chapter-02/filtering-using-remove-if/: main.cpp
chapter-02/move-selected/: main.cpp
chapter-02/partition/: main.cpp
chapter-02/range-filter-and-transform/: main.cpp
chapter-02/string-trimming/: main.cpp
chapter-03/: CMakeLists.txt
chapter-03/counting-team-members/: Makefile  main.cpp
chapter-03/older-than-generic/: main.cpp
chapter-04/: CMakeLists.txt
chapter-04/knuth-problem/: main.cpp
chapter-04/printing-people/: main.cpp  test
chapter-06/fibonacci/: main.cpp
chapter-06/generalized-memoization/: main.cpp
chapter-06/lazy-sort/: main.cpp
chapter-06/lazy-val/: main.cpp
chapter-06/recursive-memoization/: main.cpp
chapter-06/string-concatenation/: main.cpp
chapter-06/string-concatenation-refs/: Makefile  main.cpp
chapter-07/07-top-movies/: Makefile
chapter-07/07-word-frequency/: main.plist
chapter-07/top-movies/: Makefile  main.cpp
common/: person.h
(+39 files in other folders)
